CHANGES IN VERSION 1.35.1
------------------------

    o Enable support for Single-cell expression Atlas.
    o Add visualisation functions


CHANGES IN VERSION 1.25.6
------------------------

    o Update API for programmatic access from ArrayExpress to BioStudies.

CHANGES IN VERSION 1.1.3
------------------------

    o Close connection after downloading experiment summary.

    o Added xml2 package to Depends and import

CHANGES IN VERSION 0.99.4
-------------------------

    o Minor change to NAMESPACE to remove NOTE from check logs.

    o Fixed NEWS file so it works for Bioconductor release notes.

CHANGES IN VERSION 0.99.3
-------------------------

    o Made dummy data for vignette examples smaller. 
    
    o Updated DESCRIPTION.

CHANGES IN VERSION 0.99.2
-------------------------

    o Using dummy example data for the vignette examples, instead of trying to download real data.

CHANGES IN VERSION 0.99.1
-------------------------

    o Updated DESCRIPTION; use message() instead of cat() for logging

CHANGES IN VERSION 0.99
-----------------------

    o Initial release.