@@ -10,19 +10,19 @@
 }
 \arguments{
     \item{singleCellExperiment}{
-        A SingleCellExperiment object from Single Cell Expression Atlas
+        A \code{SingleCellExperiment} object from Single Cell Expression Atlas
     }
     \item{genes}{
-        Vector of gene IDs to include in the heatmap. If NULL, all genes will be shown for the default clustering. Default is NULL.
+        Vector of gene IDs to include in the heatmap. If \code{NULL}, all genes will be shown for the default clustering. Default is \code{NULL}.
     }
     \item{sel.K}{
-        Number of clusters for Single Cell Expression Atlas Experiment. If NULL, a gene list must be provided. If both \code{sel.K} and \code{genes} are \code{NULL}, the function will use default clustering for all markers genes for this experiment.
+        Number of clusters for Single Cell Expression Atlas Experiment. If \code{NULL}, a gene list must be provided. If both \code{sel.K} and \code{genes} are \code{NULL}, the function will use default clustering for all markers genes for this experiment.
     }
     \item{scaleNormExp}{
-        Logical indicating whether to scale normalized expression values, which adjusts the data to have a mean of zero and a standard deviation of one. Default is FALSE.
+        Logical indicating whether to scale normalized expression values, which adjusts the data to have a mean of zero and a standard deviation of one. Default is \code{FALSE}.
     }
     \item{show_row_names}{
-        Logical indicating whether to show gene names in rows. Default is FALSE.
+        Logical indicating whether to show gene names in rows. Default is \code{FALSE}.
     }
 }
 \value{
