@@ -5,9 +5,9 @@ affiliation: "EMBL-EBI"
 date: "`r Sys.Date()`"
 output:
   html_document:
-    toc: true
+    toc: false
     toc_depth: 3
-    number_sections: true
+    number_sections: false
 bibliography: references.bib
 keywords: ["gene expression", "RNA-seq", "ExpressionAtlas", "Bioconductor"]
 vignette: >
@@ -16,6 +16,21 @@ vignette: >
 ---
 
 
+This vignette demonstrates how to access and analyze GTEX RNA-seq data from Expression Atlas. The example shows how to:
+
+1. Search and retrieve GTEX data.
+2. Get raw counts and normalized expression data (TPM and FPKM).
+3. Create heatmaps for visualization of gene expression patterns.
+4. Filter and analyze specific genes of interest across GTEX tissues.
+
+
+The following example uses the `ExpressionAtlas` package to access `E-GTEX-8` dataset (17350 samples).
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(message=FALSE)
+knitr::opts_chunk$set(warning=FALSE)
+```
 
 ```{r}
 suppressMessages( library( ExpressionAtlas ) )
@@ -40,7 +55,7 @@ head(gtex_tpm)
 gtex_fpkm <- getNormalisedAtlasExpression( experimentAccession = "E-GTEX-8", normalisation = "fpkm" )
 head(gtex_fpkm)
 
-gtex_heatmap <- heatmapAtlasExperiment( df = gtex_tpm, filename = "E-GTEX-8-tpm-heatmap.pdf", save_pdf= FALSE, show_plot = TRUE, heatmap_color = "Reds", top_n = 30, show_heatmap_title = TRUE )
+gtex_heatmap <- heatmapAtlasExperiment( df = gtex_tpm, filename = "E-GTEX-8-tpm-heatmap.pdf", save_pdf= FALSE, show_plot = TRUE, heatmap_color = "Reds", top_n = 50, show_heatmap_title = TRUE )
 
 
 library(ComplexHeatmap)
