@@ -24,14 +24,14 @@ from [ArrayExpress](https://www.ebi.ac.uk/biostudies/arrayexpress) and
 other data sources that have been manually 
 curated and re-analyzed via the Functional Genomics Team analysis pipelines [@George2023]. Since October 
 2022, ArrayExpress is a collection of functional genomics data in BioStudies
-(https://www.ebi.ac.uk/biostudies). The 
-Expression Atlas website allows users to search these datasets for genes and/or
+(https://www.ebi.ac.uk/biostudies).
+
+The Expression Atlas website allows users to search these datasets for genes and/or
 experimental conditions, to discover which genes are expressed in which
 tissues, cell types, developmental stages, and hundreds of other experimental
 conditions.
 
-The *ExpressionAtlas* R package allows you to search for - via the EBI RESTful Web 
-Services API - and download pre-packaged data from Expression Atlas inside an R session. Raw counts
+The *ExpressionAtlas* R package allows you to search and download pre-packaged data from Expression Atlas inside an R session. Raw counts
 are provided for RNA-seq datasets, while normalized intensities are available
 for microarray experiments. Protocols describing how the data was generated are
 contained within the downloaded R objects, with more detailed information
@@ -39,9 +39,12 @@ available on the [Expression Atlas website](http://www.ebi.ac.uk/gxa).
 Sample annotations are also included in the R object.
 
 Single-cell datasets are downloaded in annData format, and loaded into a 
-SingleCellExperiment object.
+SingleCellExperiment object for access and customised visualisation.
 
 # Searching and downloading Expression Atlas data
+
+The package communicates with the EBI RESTful Web Services API and Expression Atlas
+API to enable efficient data searching and retrieval.
 
 ## Searching
 
@@ -53,12 +56,17 @@ containing the results of your search. The first argument to
 e.g. biological sample attributes, experimental treatments nad/or species. You may also
 optionally provide a secondary filter yo your query to limit your search to, as a second argument.
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(message=FALSE)
+knitr::opts_chunk$set(warning=FALSE)
+```
+
 ```{r}
 suppressMessages( library( ExpressionAtlas ) )
 ```
 
 ```{r eval=FALSE}
-atlasRes <- searchAtlasExperiments( query = "salt", secondaryFilter = "oryza" )
+atlas_res <- searchAtlasExperiments( query = "salt", secondaryFilter = "oryza" )
 # Searching for experiments matching your query ...
 # Query successful.
 # Found 4 experiments matching your query.
@@ -215,7 +223,7 @@ preproc( experimentData( affy126data ) )
 
 ## Downloading a single Expression Atlas experiment summary
 
-You can also download data for a single Expression Atlas experiment using the
+You can download data for a single Expression Atlas experiment using the
 `getAtlasExperiment()` function:
 
 ```{r eval=FALSE}
@@ -261,7 +269,7 @@ mtab10104_dea <- getAnalysticsDifferentialAtlasExpression( "E-MTAB-10104" )
 ```
 
 
-## Creating heatmap from a single Expression Atlas experiment normalised data
+## Creating heatmap from normalised data of a Expression Atlas experiment
 
 You can create heatmap from downloaded normalised data for a single Expression Atlas experiment using the
 `getNormalisedAtlasExpression()` function:
@@ -276,7 +284,7 @@ And now using CPM data, instead of TPM:
 geod74322_cpm <- getNormalisedAtlasExpression( "E-GEOD-74322", "cpm" )
 geod74322 <- heatmapAtlasExperiment( geod74322_cpm, "E-GEOD-74322-cpm-heatmap.pdf", FALSE, TRUE,  "Blues", 20, TRUE )
 ```
-## Creating a Volcano plot from a differential Expression Atlas experiment normalised data
+## Creating a Volcano plot using normalised data from a differential Expression Atlas experiment
 
 You can create volcano plot from downloaded normalised data for a single Expression Atlas experiment using the
 `volcanoDifferentialAtlasExperiment()` function:
@@ -325,12 +333,6 @@ You can download data for a Single-Cell Expression Atlas experiment using the
 enad19 <- getAtlasSCExperiment( "E-ENAD-19" )
 # returns a SingleCellExperiment object
 
-print("Reduced dimension names:")
-print(reducedDimNames(enad19))
-
-print("Column data names:")
-print(colnames(colData(enad19)))
-
 ```
 
 ## Visualise a dimensionality reduction plot of a SingleCellExperiment object
@@ -351,7 +353,7 @@ plotDimRedSCAtlasExperiment(egeod6552, dimRed = "X_pca", colorby = "time" )
 
 plotDimRedSCAtlasExperiment(egeod6552, dimRed = "X_umap_neighbors_n_neighbors_20", colorby = "cell_type")
 
-plotDimRedSCAtlasExperiment(egeod6552, dimRed = "X_umap_neighbors_n_neighbors_20", colorby = "louvain_resolution_2.0") + theme_grey() + theme(legend.position = "left")
+plotDimRedSCAtlasExperiment(egeod6552, dimRed = "X_umap_neighbors_n_neighbors_20", colorby = "louvain_resolution_2.0") + theme_classic() + theme(legend.position = "left")
 
 ```
 
